samples/_failures_safe/1761043650_2a8017_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f1d041c.c: In function ‘main’:
./samples/SAFE/__tmp_0f1d041c.c:174:38: error: missing terminating ' character
  174 |     if (len > 0 && input[len - 1] == '\
      |                                      ^~
./samples/SAFE/__tmp_0f1d041c.c:174:5: error: expected expression at end of input
  174 |     if (len > 0 && input[len - 1] == '\
      |     ^~
./samples/SAFE/__tmp_0f1d041c.c:174:5: error: expected declaration or statement at end of input
